- Dragging a leiningen project already placed inside the workspace folder now works (was throwing an exception previously)

=== Enhancements
- Embedded Leiningen version upgraded from version 2.3.4 to 2.5.0
- Leiningen Automatic detection now works only if the project does not already have Java Classpath metadata set (technically speaking: if the project does not have the Java Nature).
- REPL View visual hint (<type clojure code here>) is displayed according to the menu:Preferences[Clojure > REPL View > Show hints] Preference. Fixes #662 - Toggle REPL hint (Settings)


== Changes between Counterclockwise 0.28.0 and 0.28.1

`0.28.1` released on September 28, 2014

=== Fix

- Drag & Drop from Github / Bitbucket / Google Code URLs works in Linux

=== Enhancements

==== Leiningen / Clojure autodetection

- Added a check for missing `.classpath` file for Leiningen projects. Automatically reconstruct the java build path if it is missing.
- Better User feedback for Drag & Drop folder actions


== Changes between Counterclockwise 0.27.1 and 0.28.0

`0.28.0` released on September 25, 2014

=== Enhancements

==== Automatic configuration of Leiningen Projects

In reaction to a project creation which contains a `project.clj` file, or an existing project modification consisting in adding a `project.clj` file, etc., CCW will by default react by adding the `Leiningen Nature` to the project. Meaning you'll see the `Leiningen Dependencies` Classpath Container appear in the project, and be able to launch it as a Leiningen project.

This feature can be disabled globally via the menu:Preferences[Clojure > General > Automatic detection of Clojure/Leiningen projects] preference

==== Project Drag and Drop from OS to Counterclockwise
