@@ -145,6 +145,8 @@ ccw.leiningen.command.add-leiningen-nature.name=Convert to Leiningen Project
 ccw.leiningen.command.add-leiningen-nature.description=Convert to Leiningen Project
 ccw.leiningen.command.reset-project-classpath.name=Reset project configuration
 ccw.leiningen.command.reset-project-classpath.description=Reset project configuration
+ccw.leiningen.command.remove-leiningen-nature.name=Remove Leiningen Support
+ccw.leiningen.command.remove-leiningen-nature.description=Remove Leiningen Support
 ccw.leiningen.popup.menu.label=Leiningen
 ccw.leiningen.problemmarker.classpathcontainer=Leiningen Classpath Container
 
